partial/force-app/main/default/objects/Landlord__c/Landlord__c.object-meta.xml
<CustomObject>
    <label>Landlord</label>
    <nameField>
        <label>Landlord Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Landlords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>