partial/force-app/main/default/objects/Landlord__c/fields/Reapit_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Created_Date__c</fullName>
    <label>Reapit Created Date</label>
    <type>DateTime</type>
</CustomField>