partial/force-app/main/default/objects/Landlord__c/fields/Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>Unit_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Id</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Landlords</relationshipLabel>
    <relationshipName>Landlords</relationshipName>
    <type>Lookup</type>
</CustomField>